assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Manrope:wght@400;700&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;700&display=swap');

:root {

    /* Fonts */
    
    --font-family-inter: 'Inter', sans-serif;
    --font-family-manrope: 'Manrope', sans-serif;
    --font-family-poppins: 'Poppins', sans-serif;
    --font-family-roboto: 'Roboto', sans-serif;

    /* Colors */
    --color-primary: #3A3A3A;
    --color-secondary: #787885;
    --color-accent: #E02C6D;
    --color-product-title: #18191F;
    --color-product-rating: #5E6366;
    --color-product-rating-star: #FB8200;
    --color-dark: #000000;
    --color-white: #FFFFFF;
    --color-special-section-title: #0A0826;
    --color-special-section-description: #6C6C6C;
    --color-footer-background: #0A0826;
    --color-footer-secondary: #D9DBE1;

    /* Border-radius */
    --border-radius-round-button: 41px;
    --border-radius-primary: 5px;
    --border-radius-special: 7px;

    /* Box-shadow */
    --box-shadow-primary: 0px 0px 40px rgba(0, 0, 0, 0.15);

    /* Margin */
    --margin-top: 90px;
    --margin-bottom: 90px;
    --margin-left: 120px;
    --margin-right: 120px;
}

/* Reset styling start */

html {
    scroll-behavior: smooth;
}

*, *:before, *:after {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    font-family: var(--font-family-poppins);
}

h1, h2, h3, h4, h5, h6, p {
    margin: 0;
    padding: 0;
}

ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

a {
    text-decoration: none;
    color: var(--color-primary);
}

/* Reset styling end */


/* Useful Classes start */

.m-0 {
    margin: 0;
}

.p-0 {
    padding: 0;
}

.d-flex {
    display: flex;
}

.d-block {
    display: block;
}

.d-ib {
    display: inline-block;
}

.f-a-c {
    align-items: center;
}

.f-j-c {
    justify-content: center;
}

.f-j-sb {
    justify-content: space-between;
}

.f-j-se {
    justify-content: space-evenly;
}

.f-f-c {
    flex-direction: column;
}

.f-f-r {
    flex-direction: row;
}

.container {
    width: 84%;
    margin: 0 auto;
}

.btn-primary {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 10px 24px;
    width: 196px;
    height: 44px;
    background: var(--color-accent);
    color: var(--color-white);
}

.rounded {
    border-radius: var(--border-radius-round-button);
}

/* Useful Classes end */


/* Nav start */

header.container {
    margin: 90px auto 40px auto;
}

.brand-logo {
    font-weight: bold;
    font-size: 24px;
    line-height: 36px;
}

.nav-item {
    color: var(--color-primary);
    font-weight: 600;
    font-size: 16px;
    line-height: 24px;
}

.nav-item:not(:first-child) {
    margin: 0 0 0 30px;
}

.nav-item i {
    font-size: 19px;
}

/* Nav end */


/* Intro section start */

.intro {
    margin-top: 40px;
}

.intro-content,
.intro-image-wrapper {
    width: 50%;
}

.intro-image-wrapper {
    padding: 20px 0;
    background-image: url('../images/Circle design.svg');
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
}

.intro-heading {
    font-weight: bold;
    font-size: 52px;
    line-height: 70px;
    margin-bottom: 15px;
}

.intro-heading span {
    display: block;
}

.intro-description {
    margin-bottom: 15px;
    padding-right: 25%;
    font-weight: 600;
    font-size: 16px;
    line-height: 24px;
}

.intro-btn {
    font-weight: bold;
    font-size: 16px;
    line-height: 24px;
}

.intro-btn i {
    margin-left: 10px;
}

/* Intro section end */


/* Company logos start */

.company-logos {
    position: relative;
    margin: 70px 45px;
    padding: 35px 60px;
}

.company-logos::before,
.company-logos::after {
    content: "";
    background: linear-gradient(90deg, rgba(192, 204, 218, 0.1) 0%, rgba(192, 204, 218, 0.6) 50.38%, rgba(192, 204, 218, 0.1) 100%);
    width: 100%;
    height: 1px;
    position: absolute;
    left: 0;
    right: 0;
}

.company-logos::before {
    top: 0;
}

.company-logos::after {
    bottom: 0;
}

/* Company logos end */


/* Popular collection start */

.popular-collection {
    padding: 0 80px;
    margin-bottom: 100px;
}

.popular-collection-title {
    font-weight: 600;
    font-size: 28px;
    line-height: 70px;
    text-align: center;
    margin-bottom: 30px;
}

.cards {
    display: grid;
    grid-template-columns: repeat(3, max-content);
    grid-gap: 30px;
    justify-items: center;
    justify-content: center;
    margin-bottom: 50px;
}

.card {
    width: 329px;
    height: 476px;
    padding: 15px;
    box-shadow: var(--box-shadow-primary);
    border-radius: var(--border-radius-primary);
}

.product-title {
    font-weight: 500;
    font-size: 28px;
    line-height: 40px;
    margin: 15px 0 0 0;
    color: var(--color-product-title);
}

.product-price {
    font-family: var(--font-family-inter);
    font-weight: normal;
    font-size: 24px;
    line-height: 150%;
    margin-top: 5px;
    color: var(--color-dark);
}

.product-rating {
    margin-top: 5px;
}

.product-rating-starts {
    margin-right: 10px;
    color: var(--color-product-rating-star);
}

.product-rating-value {
    color: var(--color-product-rating);
    font-family: var(--font-family-roboto);
}

.product-other-info {
    color: var(--color-secondary);
    font-weight: bold;
    font-size: 14px;
    line-height: 143%;
    margin-top: 5px;
    letter-spacing: 0.018em;
}

.see-more-btn-wrapper {
    justify-self: end;
    grid-column-end: 4;
}

.see-more-btn {
    width: 100px;
    height: 24px;
    margin-top: 20px;
    padding: 0 0;
    background-color: transparent;
    color: var(--color-accent);
    font-weight: bold;
    font-size: 16px;
    line-height: 24px
}

.see-more-btn i {
    margin-left: 8px;
}

/* Popular collection end */


/* Featured products start */

.featured-products {
    margin: 0 45px 100px 45px;
}

.featured-products-image-wrapper {
    margin-right: 100px;
}

.featured-products-title {
    color: var(--color-special-section-title);
    font-weight: bold;
    font-size: 38px;
    line-height: 60px;
}

.featured-products-description {
    width: 85%;
    color: var(--color-special-section-description);
    font-weight: bold;
    font-size: 16px;
    line-height: 28px;
}

.featured-products-title,
.featured-products-description {
    margin-bottom: 15px;
}

.featured-products-btn {
    width: 155px;
    font-weight: bold;
    font-size: 16px;
    line-height: 24px;
}

.featured-products-btn i {
    margin-left: 8px;
}

/* Featured products end */

